Handling an exception, and creating a new endpoint